# blue-64

./: .gitignore  .gitmodules  LICENSE.txt  README.ad  README.adoc  README.html  README.md
development/hardware/: bom.csv
development/hardware/gerbers/: blue_64-B_Cu.gbr  blue_64-B_Fab.gbr  blue_64-B_Mask.gbr  blue_64-B_Paste.gbr  blue_64-B_Silkscreen.gbr  blue_64-Edge_Cuts.gbr  blue_64-F_Cu.gbr  blue_64-F_Fab.gbr  blue_64-F_Mask.gbr  blue_64-F_Paste.gbr  blue_64-F_Silkscreen.gbr  blue_64-In1_Cu.gbr  blue_64-In2_Cu.gbr  blue_64-NPTH.drl  blue_64-PTH.drl  blue_64-job.gbrjob
development/hardware/v0/: bom.csv
development/hardware/v0/gerbers/: blue_64-B_Cu.gbr  blue_64-B_Fab.gbr  blue_64-B_Mask.gbr  blue_64-B_Paste.gbr  blue_64-B_Silkscreen.gbr  blue_64-Edge_Cuts.gbr  blue_64-F_Cu.gbr  blue_64-F_Fab.gbr  blue_64-F_Mask.gbr  blue_64-F_Paste.gbr  blue_64-F_Silkscreen.gbr  blue_64-In1_Cu.gbr  blue_64-In2_Cu.gbr  blue_64-NPTH.drl  blue_64-PTH.drl  blue_64-job.gbrjob
development/software/: .gitignore  build_btstack.bat  build_btstack.sh  package.bat  setup.bat
development/software/src/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults
development/software/src/main/: CMakeLists.txt  Kconfig  c64b_bt.c  c64b_bt_allowlist.c  c64b_keyboard.c  c64b_keyboard.h  c64b_macros.c  c64b_macros.h  c64b_parser.c  c64b_parser.h  c64b_parser_gp.c  c64b_parser_kb.c  c64b_parser_kb.h  c64b_parser_kbl.c  c64b_parser_kbp.c  c64b_parser_kbs.c  c64b_pinout_0v1.h  c64b_pinout_0v2.h  c64b_platform.c  c64b_properties.c  c64b_properties.h  c64b_threadsafe.c  c64b_threadsafe.h  c64b_update.c  c64b_update.h  main.c  uni_platform_c64_blue.c  uni_platform_custom.c
doc/: README.adoc  compatibility.ad  compatibility.adoc  firmware_update.ad  firmware_update.adoc  mapping.ad  mapping.adoc  menu.ad  menu.adoc  misc.ad  misc.adoc  publish.sh
doc/asciidoc/: README.adoc  compatibility.adoc  firmware_update.adoc  mapping.adoc  menu.adoc  misc.adoc
doc/resources/: header.adoc  styles.ad  styles.adoc  theme.yml  theme_title.yml
(+19 files in other folders)
